# markdown-notes

./: .gitignore  CHANGELOG.md  Especificación de Requerimientos Técnicos (SRS).md  README.md  firestore.rules  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: capacitor.config.ts  package.json
apps/server/: .env.example  Dockerfile  package.json  tsconfig.json
apps/server/src/: index.ts
apps/web/: nuxt.config.ts  package.json  tailwind.config.ts
apps/web/assets/styles/: global.css
apps/web/composables/: useAuth.ts  useVaultInactivity.ts
apps/web/layouts/: auth.vue  default.vue
apps/web/middleware/: auth.ts  guest.ts
apps/web/pages/: index.vue  vault.vue
apps/web/pages/folders/: [[folderId]].vue
apps/web/plugins/: firebase.client.ts  pinia.ts
docs/: architecture.md
markdown-notes-monorepo/: .gitignore  .npmrc  package.json  pnpm-lock.yaml
markdown-notes-monorepo/apps/desktop/: package.json
markdown-notes-monorepo/apps/desktop/src-tauri/: tauri.conf.json
markdown-notes-monorepo/apps/mobile/: capacitor.config.ts  package.json
markdown-notes-monorepo/apps/server/: package.json
markdown-notes-monorepo/apps/web/: .env.example  app.vue  nuxt.config.ts  package.json
markdown-notes-monorepo/apps/web/composables/: useAuth.ts  useVaultInactivity.ts
markdown-notes-monorepo/apps/web/layouts/: auth.vue  default.vue
markdown-notes-monorepo/apps/web/middleware/: auth.ts  guest.ts
(+7 files in other folders)
